--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,3 +1,14 @@
-.hubspot-form {
-    width: 700px;
+@media (min-width: 320px) and (max-width: 375px) {
+    
+    .hubspot-form {
+        /* position: static !important; */
+        width: 300px;
+        display: flex;
+        justify-content: flex-start;        
+    }
+
+    .button-form {
+        width: 200px;
+        height: 50px;
+    }
 }
